--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Site Title</title>
+    <title>私の足跡</title>
 </head>
 <body>
-    <iframe id="BbMTckWD" frameborder="0" src="./Add Map - JSFiddle_files/translateSandbox.html" style="width: 0px; height: 0px; display: none;"></iframe>
+    <iframe width="100%" height="300" src="//jsfiddle.net/Hanqin/1vb95sre/1/embedded/" frameborder="0" loading="lazy" allowtransparency="true" allowfullscreen="true"></iframe>
 </body>
 </html>
