--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>私の足跡</title>
 </head>
 <body>
-    <iframe width="100%" height="900" src="Add-Map-JSFiddle.html" frameborder="0" allowfullscreen="true"></iframe>
+    <iframe width="100%" height="900" src="Myfootprints.html" frameborder="0" allowfullscreen="true"></iframe>
 </body>
 </html>
